--- a/Targets/Bonito2enc/conf/Makefile.Bonito2elm
+++ b/Targets/Bonito2enc/conf/Makefile.Bonito2elm
@@ -18,7 +18,7 @@
 .SUFFIXES:	.S .c .o
 
 CROSS_COMPILE 	=mips-elf-
-#CROSS_COMPILE 	=mipsel-linux-
+#CROSS_COMPILE 	=mipsel-none-elf-
 
 #
 # Include the make variables (CC, etc...)
